[package]
name = "arborist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = ["arborist-core/bench"]
proptest = ["dep:proptest", "arborist-core/proptest"]

bumpalo_vec = ["dep:bumpalo", "arborist-core/bumpalo_vec"]
const_vec = ["dep:tinyvec"]
no_float = ["arborist-core/no_float"]
std_vec = ["arborist-core/std_vec"]
default = ["const_vec", "std_vec"]

[dependencies]
arborist-core = { version = "0.1.0", path = "./core" }
arborist-proc = { version = "0.1.0", path = "./proc" }
bumpalo = { version = "3.13.0", optional = true }
tinyvec = { version = "1.6.0", optional = true }
proptest = { version = "1.2.0", optional = true }

[dev-dependencies]
arborist-proc = { version = "0.1.0", features = ["test_utils"], path = "./proc" }

[lib]
crate-type = ["cdylib", "rlib"]