[workspace]
members = ["arborist", "core", "proc"]

[workspace.dependencies]
rand = { version = "0.8.5" }
tinyvec = { version = "1.6.0" }
bumpalo = { version = "3.14.0" }
arborist-core = { version = "0.1.0", path = "core" }
arborist-proc = { version = "0.1.0", path = "proc" }
criterion = { version = "0.5.1" }