[package]
name = "arborist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = ["arborist-core/bench"]
bumpalo_vec = ["dep:bumpalo", "arborist-core/bumpalo_vec"]
const_vec = ["dep:tinyvec"]
no_float = ["arborist-core/no_float"]
std_vec = ["arborist-core/std_vec"]

default = ["const_vec", "std_vec"]

[dependencies]
arborist-core = { workspace = true }
arborist-proc = { workspace = true }
bumpalo = { workspace = true, optional = true }
tinyvec = { workspace = true, optional = true }

[dev-dependencies]
arborist-proc = { workspace = true, features = ["test_utils"] }
rand = { workspace = true, features = ["small_rng"] }

[lib]
crate-type = ["cdylib", "rlib"]