[package]
name = "arborist-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = ["dep:criterion"]
const_vec = ["dep:tinyvec"]
bumpalo_vec = ["dep:bumpalo"]
std_vec = []
no_float = []

default = ["const_vec", "std_vec"]

[dependencies]
arborist-proc = { version = "0.1.0", path = "../proc" }
bumpalo = { version = "3.13.0", optional = true }
tinyvec = { version = "1.6.0", optional = true }
# Bench
criterion = { version = "0.3.6", optional = true }

[dev-dependencies]
arborist-proc = { version = "0.1.0", features = ["test_utils"], path = "../proc" }
rand = { version = "0.8.5", features = ["small_rng"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "fenwick"
harness = false