[package]
name = "arborist-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = ["dep:criterion"]
const_vec = ["dep:tinyvec"]
bumpalo_vec = ["dep:bumpalo"]
std_vec = []
no_float = []

default = ["const_vec", "std_vec"]

[dependencies]
arborist-proc = { workspace = true }
bumpalo = { workspace = true, optional = true }
tinyvec = { workspace = true, optional = true }
# Bench
criterion = { workspace = true, optional = true }

[dev-dependencies]
arborist-proc = { workspace = true, features = ["test_utils"]  }
rand = { workspace = true, features = ["small_rng"] }
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "fenwick"
harness = false