[package]
name = "arborist-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test_utils = []
default = []

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"

[dependencies.syn]
version = "2.0.29"

[lib]
proc-macro = true